fix resizing + menu z-index

--- a/index.less
+++ b/index.less
@@ -43,6 +43,7 @@
 		  list-style-type: none;
 		  margin: 0;
 		  padding: 0;
+			z-index: 1;
 		}
 
 		.menu > li {
